fixed overflow

--- a/src/components/create-company/create-company.css
+++ b/src/components/create-company/create-company.css
@@ -100,6 +100,8 @@ dl {
       height: 300px;
       width: 500px;
       overflow: scroll;
+      overflow-x: hidden;
+      overflow-y: hidden;
   }
   .create-company-industry-option{
       cursor: pointer;
